# wpoke

./: .dockerignore  .gitignore  .travis.yml  CHANGELOG  Dockerfile  LICENSE  README.md  README.rst  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt  settings.toml  setup.cfg  setup.py  tox.ini  wpoke-cli.py  wpoke.py
.circleci/: config.yml
.github/workflows/: ci.yml
client/: client.go
server/: client.go  server.go  store.go
tests/: test_config.py  test_store.py
tests/fixtures/crawlers/theme/css/: child_theme.css  duplicated.css  empty_next_fallback.css
tests/fixtures/crawlers/theme/css/sites/: sozpic.com.css
tests/fixtures/crawlers/theme/html/: binary.html  child_theme.html  duplicates.html  malformed.html  no_scheme.html  normal.html  urls_third_parties.html
tests/fixtures/crawlers/theme/html/sites/: sozpic.com.html
tests/test_crawlers/test_theme/: test_crawler.py  test_models.py
tests/test_fingers/test_theme/: test_crawler.py  test_finger.py  test_models.py
tests/test_validators/: test_url.py
wpoke/: __init__.py  cli.py  client.py  conf.py  exceptions.py  finger.py  hand.py  loader.py  store.py
wpoke/crawlers/theme/: crawler.py  exceptions.py  models.py  urls.py  views.py
wpoke/fingers/: __init__.py
wpoke/fingers/theme/: __init__.py  crawler.py  exceptions.py  models.py  serializers.py
wpoke/models/: __init__.py
wpoke/validators/: __init__.py  url.py
