[tool.poetry]
name = "wpoke"
version = "0.1.0"
description = "WordPress information gathering tool"
authors = ["Marcos <marsanben92@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.3"
serpy = "^0.3.1"
lxml = "^4.3"
ipaddress = "^1.0"
uvloop = "^0.12.1"
aiohttp = "^3.5"
dynaconf = "^1.2"
aiodns = "^2.0"

[tool.poetry.dev-dependencies]
pytest-asyncio = "^0.10.0"
ipdb = "^0.11.0"
pytest = "^4.3"
mock = "^2.0"
asynctest = "^0.12.2"
tox = "=3.7.0"
black = "=19.3b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
